--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.6",
+    "devicon": "^2.16.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
